--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ margin-top: 12px;
 
       </div>
       <video id="vid1" autoplay loop muted style="filter:blur(1px);" class="bgvid hide-on-med-and-down">
-        <source src="/desk_video.mp4" type="video/mp4">
+        <source src="/desk_video.mp1#t=2" type="video/mp4">
       </video>
       <video id="vid2" autoplay muted loop style="filter:blur(0px);" class="bgvid show-on-small hide-on-med-and-up">
-        <source src="/mob_video.mp4" type="video/mp4">
+        <source src="/mob_video.mp4#t=1" type="video/mp4">
       </video>
     </div>
     <div calss="head-text">
