--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@ margin-top: 12px;
     <div class="col s12 m6 vidcont">
 
       </div>
-      <video id="vid1" autoplay loop muted style="filter:blur(1px);" class="bgvid hide-on-med-and-down">
+      <video id="vid1" autoplay loop muted style="filter:blur(1px);" poster="/static_desk.gif" class="bgvid hide-on-med-and-down">
         <source src="/desk_video.mp1#t=2" type="video/mp4">
       </video>
-      <video id="vid2" autoplay muted loop style="filter:blur(0px);" class="bgvid show-on-small hide-on-med-and-up">
+      <video id="vid2" autoplay muted loop style="filter:blur(0px);" poster="/static_mob.gif" class="bgvid show-on-small hide-on-med-and-up">
         <source src="/mob_video.mp4#t=1" type="video/mp4">
       </video>
     </div>
